[Fix] -> Archive title spacing fix in full width stretched layout.

--- a/assets/css/unminified/skin-1-rtl.css
+++ b/assets/css/unminified/skin-1-rtl.css
@@ -1052,6 +1052,7 @@ body {
 
 .ast-page-builder-template .ast-archive-description {
   margin-top: 3em;
+  margin-bottom: 0;
   margin-right: auto;
   margin-left: auto;
   padding-right: 20px;
