--- a/assets/css/unminified/skin-1.css
+++ b/assets/css/unminified/skin-1.css
@@ -1052,6 +1052,7 @@ body {
 
 .ast-page-builder-template .ast-archive-description {
   margin-top: 3em;
+  margin-bottom: 0;
   margin-left: auto;
   margin-right: auto;
   padding-left: 20px;
