--- a/sass/site/layout/_layout-skin-1.scss
+++ b/sass/site/layout/_layout-skin-1.scss
@@ -314,6 +314,7 @@ body{
 
 	.ast-archive-description {
 		margin-top: 3em;
+		margin-bottom: 0;
 		margin-left: auto;
 		margin-right: auto;
 		padding-left: ($grid-gutter-width / 2);
